--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3c0feb8e",
+   "id": "75468adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "76761e15",
+   "id": "b5b7b834",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f33f8dcb",
+   "id": "5ac797a9",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3be00b5c",
+   "id": "1c23d502",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d2220448",
+   "id": "b54c41a6",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c7c5369d",
+   "id": "bb97c0e5",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7c43a8d0",
+   "id": "b43ce42d",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e5076d28",
+   "id": "eec61950",
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4db00d01",
+   "id": "2fe230e7",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1137a605",
+   "id": "1a43b3ed",
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0ecb12aa",
+   "id": "0450c30f",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "d9ec1327",
+   "id": "17e7da7f",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fedbe2b7",
+   "id": "2b7c7209",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7376450a",
+   "id": "99d927ec",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5769544b",
+   "id": "7dc876b2",
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2fba240b",
+   "id": "045b2d1b",
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "cdb5df8c",
+   "id": "a175991d",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ed2c02d1",
+   "id": "022bb155",
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "881f8ae9",
+   "id": "6e3557b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "852e5967",
+   "id": "c3505fef",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7b3ae996",
+   "id": "0ae1b009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a4f4af8e",
+   "id": "86870eeb",
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "53f719f3",
+   "id": "c6ea6c47",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "bf366c93",
+   "id": "06059575",
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1168,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "64d12a12",
+   "id": "08e12c41",
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "196fe5e8",
+   "id": "ca6ed82a",
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "cb417a02",
+   "id": "b602701f",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ddc1b019",
+   "id": "9f04351c",
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1490,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4cd17229",
+   "id": "f1c58f3b",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0f4255e9",
+   "id": "50f21afd",
    "metadata": {},
    "outputs": [
     {
@@ -1626,7 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f4dd2e68",
+   "id": "bdc62091",
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1df1180b",
+   "id": "86fdbd4a",
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1684,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "510ed0a6",
+   "id": "64ec87fa",
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1706,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "29caa108",
+   "id": "47a895b3",
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1728,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f36f0c17",
+   "id": "d04366bd",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a1ecb62d",
+   "id": "f43d2ba2",
    "metadata": {},
    "outputs": [
     {
@@ -1776,7 +1776,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "ec4d4cfc",
+   "id": "ba567941",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "88bb9332",
+   "id": "05508dd3",
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "da6716e0",
+   "id": "1fdd47e1",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "786342e5",
+   "id": "5b13b1f4",
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1856,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5c5651fa",
+   "id": "daaaaee6",
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "0c704890",
+   "id": "a6fd49b8",
    "metadata": {},
    "outputs": [
     {
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "718a9736",
+   "id": "968594ec",
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1940,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "42288248",
+   "id": "5699096b",
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +1968,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "665bb963",
+   "id": "f162eeba",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "1170a820",
+   "id": "c5c63cc9",
    "metadata": {},
    "outputs": [
     {
@@ -2024,7 +2024,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "469b39f4",
+   "id": "30899cb3",
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2052,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b571747d",
+   "id": "368524de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2064,7 +2064,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "7c7b0e94",
+   "id": "417f6dad",
    "metadata": {},
    "outputs": [
     {
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "55a10596",
+   "id": "f67b18c5",
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2118,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "97c0c256",
+   "id": "3783a9ba",
    "metadata": {},
    "outputs": [
     {
@@ -2145,7 +2145,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6bef18d2",
+   "id": "582f2245",
    "metadata": {},
    "outputs": [
     {
@@ -2177,7 +2177,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "57c3082c",
+   "id": "db4a81ee",
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "5cc9c45e",
+   "id": "689a34f9",
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2241,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "3bc6fa18",
+   "id": "547b69b2",
    "metadata": {},
    "outputs": [
     {
@@ -2276,7 +2276,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "c471e8bc",
+   "id": "fc7e1c94",
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2296,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "cf3564f9",
+   "id": "72ae9a27",
    "metadata": {},
    "outputs": [
     {
@@ -2355,7 +2355,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c746c3ed",
+   "id": "d3903727",
    "metadata": {},
    "outputs": [
     {
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "927117fc",
+   "id": "3476617f",
    "metadata": {},
    "outputs": [
     {
@@ -2473,7 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "ff01ddcd",
+   "id": "8cb20bb0",
    "metadata": {},
    "outputs": [
     {
@@ -2508,7 +2508,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "2e5d3f64",
+   "id": "585b29b7",
    "metadata": {},
    "outputs": [
     {
@@ -2567,7 +2567,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "e83fcc51",
+   "id": "a18fb43b",
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2626,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "72b7e21b",
+   "id": "55e1e778",
    "metadata": {},
    "outputs": [
     {
@@ -2685,7 +2685,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "785732a5",
+   "id": "fb0c7e6e",
    "metadata": {},
    "outputs": [
     {
@@ -2720,7 +2720,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "54ca3097",
+   "id": "57ac7e04",
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +2747,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "42448b9c",
+   "id": "92485b46",
    "metadata": {},
    "outputs": [
     {
@@ -2770,7 +2770,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "591649c3",
+   "id": "2dbba232",
    "metadata": {},
    "outputs": [
     {
@@ -2797,7 +2797,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "3470a1b5",
+   "id": "d7d3e18f",
    "metadata": {},
    "outputs": [
     {
@@ -2822,7 +2822,8 @@
     "    autopct='%1.1f%%',\n",
     "    shadow=True, startangle=150)\n",
     "plt.title(\"% of Total Fares by City Type\")\n",
-    "\n",
+    "# Save Figure\n",
+    "plt.savefig(\"analysis/Fig5.png\")\n",
     "# Change the default font size from 10 to 14.\n",
     "mpl.rcParams['font.size'] = 14\n",
     "\n",
@@ -2833,7 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "3107aed4",
+   "id": "71e88cfb",
    "metadata": {},
    "outputs": [
     {
@@ -2858,7 +2859,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "ec0bd371",
+   "id": "0b6b31d7",
    "metadata": {},
    "outputs": [
     {
@@ -2879,7 +2880,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "3954e550",
+   "id": "35b6cf43",
    "metadata": {},
    "outputs": [
     {
@@ -2906,7 +2907,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "4f79b2f1",
+   "id": "30c859a5",
    "metadata": {},
    "outputs": [
     {
@@ -2931,7 +2932,8 @@
     "    autopct='%1.1f%%',\n",
     "    shadow=True, startangle=150)\n",
     "plt.title(\"% of Total Rides by City Type\")\n",
-    "\n",
+    "# Save Figure\n",
+    "plt.savefig(\"analysis/Fig6.png\")\n",
     "# Change the default font size from 10 to 14.\n",
     "mpl.rcParams['font.size'] = 14\n",
     "\n",
@@ -2941,11 +2943,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 134,
+   "id": "ea23230b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        2.623613\n",
+       "Suburban    16.481668\n",
+       "Urban       80.894719\n",
+       "Name: driver_count, dtype: float64"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of drivers for each city type.\n",
+    "driver_percents = 100 * city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] / city_data_df[\"driver_count\"].sum()\n",
+    "\n",
+    "driver_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a918e1b0",
+   "id": "26928301",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build percentage of rides by city type pie chart.\n",
+    "plt.subplots(figsize=(10, 6))\n",
+    "plt.pie(driver_percents,\n",
+    "    labels=[\"Rural\", \"Suburban\", \"Urban\"],\n",
+    "    colors=[\"gold\", \"lightskyblue\", \"lightcoral\"],\n",
+    "    explode=[0, 0, 0.1],\n",
+    "    autopct='%1.1f%%',\n",
+    "    shadow=True, startangle=165)\n",
+    "plt.title(\"% of Total Drivers by City Type\")\n",
+    "# Change the default font size from 10 to 14.\n",
+    "mpl.rcParams['font.size'] = 14\n",
+    "# Save Figure\n",
+    "plt.savefig(\"analysis/Fig7.png\")\n",
+    "# Show Figure\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
